--- a/P6 clase/html/gene.html
+++ b/P6 clase/html/gene.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Seq2 server</title>
+    <title>Seq2 Server</title>
 </head>
 <body>
     <h2>Gene name: {{context.gene_name}}</h2>
-    Sequence: <textarea> {{context.sequence}}</textarea>
+    Sequence: <p><textarea>{{context.sequence}} </textarea></p>
     <a href="/">Main page</a>
 </body>
 </html>
