--- a/Final-Project/html/gene_calc.html
+++ b/Final-Project/html/gene_calc.html
@@ -6,9 +6,11 @@
     </head>
     <body style="background: powderblue">
         <h1> GENE: {{context.gene}}</h1>
-        <p>Length: {{context.seq.len()}}</p>
-        {% for base, count in context.seq.count().items(): %}
-            <p>{{base}}: {{count}} ({{context.seq.percentage_base(base)}} %)</p>
-        {% endfor %}
+        <p>Length: {{context.length}}</p>
+        <p>Base percent: {{context.base_percent}}</p>
+        <p> A: {{context.A}} %</p>
+        <p> C: {{context.C}} %</p>
+        <p> G: {{context.G}} %</p>
+        <p> T: {{context.T}} %</p>
     </body>
 </html>
