--- a/Final-Project/html/gene_list.html
+++ b/Final-Project/html/gene_list.html
@@ -5,14 +5,6 @@
     <title>Gene List</title>
   </head>
   <body style="background: lightgreen">
-    <ul>
-      {% for item in context.data: %}
-        {% if 'logic_name' in item %}
-          <li>{{item['external_name']}} {{item['start']}} {{item['end']}}</li>
-        {% else %}
-          <li>{{item['id']}} {{item['start']}} {{item['end']}} </li>
-        {% endif %}
-      {% endfor %}
-    </ul>
+    <p>my_associated_genes: {{context.my_associated_genes}}</p>
   </body>
 </html>
