--- a/Final-Project/html/gene_calc.html
+++ b/Final-Project/html/gene_calc.html
@@ -7,9 +7,8 @@
     <body style="background: powderblue">
         <h1> GENE: {{context.gene}}</h1>
         <p>Length: {{context.length}}</p>
-        <p> A: {{context.A}} %</p>
-        <p> C: {{context.C}} %</p>
-        <p> G: {{context.G}} %</p>
-        <p> T: {{context.T}} %</p>
+        {% for base, percent in context.bases_percent.items(): %}
+        <p>{{base}}: {{percent}} %</p>
+        {% endfor %}
     </body>
 </html>
