--- a/Final-Project/html/gene_info.html
+++ b/Final-Project/html/gene_info.html
@@ -5,7 +5,7 @@
     <title>Gene Info</title>
   </head>
   <body style="background: lightgreen">
-    <h1>GENE {{context.gene}} ({{context.id}})</h1>
+    <h1>GENE: {{context.gene}} ({{context.id}})</h1>
     <p>Start: {{context.start}}</p>
     <p>End: {{context.end}}</p>
     <p>Length: {{context.length}}</p>
